# bevy_sandbox

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: README.md
src/: main.rs
src/plugins/: mod.rs
src/plugins/splash_screen_plugin/: mod.rs
src/plugins/window_descripter_plugin/: mod.rs
src/plugins/window_descriptor_plugin/: mod.rs
src/testcode/: load_font.rs  mod.rs
